--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup AWS CLI
-        uses: suranga-jayalath/pull-request-slack-notifier-modified@v1.0.0
+        #uses: suranga-jayalath/pull-request-slack-notifier-modified@v1.0.0
+        uses: Sumanshu-Nankana/setup-aws-cli@v1
         with:
           region: 'us-east-1'
           access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
