--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,6 +17,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup AWS CLI
-        uses: surangajayalath/pull-request-slack-notifier-modified@v1.0.2
+        uses: surangajayalath/pull-request-slack-notifier-modified@v1.0.3
         with:
-          secret: 'us-east-1'
+          secret: ${{ secrets. GIT_TOKEN }}
