--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,30 @@
-name: 18. Use Published AWS CLI Action
-run-name: ${{ github.actor }} is running the ${{ github.workflow }}
+# name: 18. Use Published AWS CLI Action
+# run-name: ${{ github.actor }} is running the ${{ github.workflow }}
+# # on:
+# #   - workflow_dispatch
+
 # on:
-#   - workflow_dispatch
+#   push:
+#     branches:
+#       - main
+#       - master
+# jobs:
+#   setup-aws-cli:
+#     runs-on: ubuntu-latest
 
-on:
-  push:
-    branches:
-      - main
-      - master
-jobs:
-  setup-aws-cli:
-    runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v4
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+#       - name: Setup AWS CLI
+#         uses: surangajayalath/pull-request-slack-notifier-modified@v1.0.0
+#         #uses: Sumanshu-Nankana/setup-aws-cli@v1
+#         with:
+#           region: 'us-east-1'
+#           access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           secret-access-key: ${{ secrets. AWS_SECRET_ACCESS_KEY }}
+#           aws-cli-version: 1.32.33
+#           output-format: json
 
-      - name: Setup AWS CLI
-        uses: surangajayalath/pull-request-slack-notifier-modified@v1.0.0
-        #uses: Sumanshu-Nankana/setup-aws-cli@v1
-        with:
-          region: 'us-east-1'
-          access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          secret-access-key: ${{ secrets. AWS_SECRET_ACCESS_KEY }}
-          aws-cli-version: 1.32.33
-          output-format: json
-
-      - name: List S3 buckets
-        run: aws s3api list-buckets
+#       - name: List S3 buckets
+#         run: aws s3api list-buckets
