--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,11 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Use Create Pull Request Alert Action
-        uses: surangajayalath/pull-request-slack-notifier-modified@v1.0.6
+        uses: surangajayalath/pull-request-slack-notifier-modified@v1
         with:
           repository: "surangajayalath/pull-request-slack-notifier-modified"
           base-branch: "main"
           head-branch: "feature-branch"
           pr-title: "Automated Pull Request"
           pr-body: "This is an automated pull request for merging feature changes."
-          github-token: ${{ secrets.GIT_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
