--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,16 +7,19 @@ on:
       - main
 
 jobs:
-  create-pr-alert:
+  example:
     runs-on: ubuntu-latest
     steps:
-      - name: Use Create Pull Request Alert Action
-        uses: surangajayalath/pull-request-slack-notifier-modified@v2
+      - name: Open PR
+        id: open_pr
+        uses: rematocorp/open-pull-request-action@v1
         with:
-          repository: "surangajayalath/pull-request-slack-notifier-modified"
-          base-branch: "main"
-          head-branch: "feature-branch"
-          pr-title: "Automated Pull Request"
-          pr-body: "This is an automated pull request for merging feature changes."
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          github-token: ${{ secrets.GIT_TOKEN }}
+          from-branch: change_this
+          to-branch: change_this
+          repository-owner: change_this
+          repository: change_this
+          
+      - name: Echo mergeable PR number
+        run: echo ${{ steps.open_pr.outputs.pull_number }}
+    
