--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,6 @@ jobs:
         uses: vsoch/pull-request-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          BRANCH_PREFIX: "update/"
+          #BRANCH_PREFIX: "update/"
           PULL_REQUEST_BRANCH: "main"
     
