--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,21 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pull-request-action
-        uses: surangajayalath/pull-request-slack-notifier-modified@v1
+        uses: surangajayalath/pull-request-slack-notifier-modified@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           PULL_REQUEST_BRANCH: "main"
-      
-      - name: Send PR URL to Slack
-        if: steps.pull-request-action.outputs.pull_request_url != ''
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data \
-          '{"text":"A new PR has been created: ${{ steps.pull-request-action.outputs.pull_request_url }}"}' \
-          $SLACK_WEBHOOK_URL
-
-
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}  # Add your Slack webhook URL as a secret
 
 
 
