--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,10 +15,11 @@ jobs:
         with:
           PULL_REQUEST_TITLE: 'Automated Pull Request'
           PULL_REQUEST_BODY: 'Please review the changes.'
-          PULL_REQUEST_HEAD: 'feature-branch'  # Change to your feature branch
+          PULL_REQUEST_HEAD: 'feature-branch'  # Make sure this branch exists
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 
 
 
